base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    metadata:
      spec:
        containers:
          - image: nginx
            name: nginx
